# nova-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE  README.md  update.py
docs/: contributing.md  git.md
src/: lib.rs
src/async_utils/: mod.rs
src/core/: mod.rs
src/core/allocators/: block_allocator.rs  mod.rs
src/core/reactor/: mod.rs  single_thread.rs
src/debugging/: mod.rs
src/fs/: dir.rs  file.rs  mod.rs
src/loading/: dir.rs  mod.rs
src/loading/dir/: iter.rs  mod.rs  reactor.rs
src/logging/: mod.rs
src/mesh/: mod.rs
src/renderer/: api_renderer.rs  mod.rs  nova_renderer.rs  rendergraph.rs
src/rhi/: mod.rs  rhi_enums.rs  rhi_structs.rs  rhi_traits.rs
src/rhi/dx12/: com.rs  dx12_buffer.rs  dx12_command_allocator.rs  dx12_command_list.rs  dx12_descriptor_pool.rs  dx12_descriptor_set.rs  dx12_device.rs  dx12_fence.rs  dx12_framebuffer.rs  dx12_graphics_api.rs  dx12_image.rs  dx12_memory.rs  dx12_physical_device.rs  dx12_pipeline.rs  dx12_pipeline_interface.rs  dx12_queue.rs  dx12_renderpass.rs  dx12_semaphore.rs  dx12_swapchain.rs  dx12_system_info.rs  dx12_utils.rs  mod.rs  pso_utils.rs
src/rhi/dx12/util/: barriers.rs  enum_conversions.rs  mod.rs  shaders.rs
src/rhi/vulkan/: vulkan_buffer.rs  vulkan_command_allocator.rs  vulkan_command_list.rs  vulkan_descriptor_pool.rs  vulkan_descriptor_set.rs  vulkan_device.rs  vulkan_framebuffer.rs  vulkan_graphics_api.rs  vulkan_image.rs  vulkan_memory.rs  vulkan_physical_device.rs  vulkan_pipeline.rs  vulkan_pipeline_interface.rs  vulkan_renderpass.rs  vulkan_swapchain.rs
src/settings/: mod.rs
src/shaderpack/: mod.rs  shaderpack_data.rs  structs.rs
src/surface/: mod.rs  win32_surface.rs
tests/: shaderpack_loading.rs
tools/git-hooks/: hooks-revision
tools/update/: main.py
