[package]
name = "nova-rs"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A modern, high-performance, customizable rendering engine"
keywords = ["nova", "renderer", "directx-12", "vulkan", "minecraft"]
categories = ["rendering::engine", "graphics"]

# TODO: Badges
# TODO: Profiles

[dependencies]
bitflags = "1.1.0"
cgmath = { version = "0.17", features = ["serde"], git = "https://github.com/rustgd/cgmath.git", branch = "master" }
crossbeam = "^0.7"
failure = { version = "0.1.5", git = "https://github.com/infinity0/failure.git", branch = "master" }
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await"], git = "https://github.com/rust-lang-nursery/futures-rs.git", branch = "master" }
log = { version = "0.4.7", features = ["std"] }
matches = "0.1.8"
path-dsl = "0.5.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.40"

[dev-dependencies]
maplit = "1.0.1"

[patch.crates-io]
synstructure = { git = "https://github.com/NovaMods/synstructure.git", branch = "cw/update-unicode-xid" }
