[package]
name = "nova-rs"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A modern, high-performance, customizable rendering engine"
keywords = ["nova", "renderer", "directx-12", "vulkan", "minecraft"]
categories = ["rendering::engine", "graphics"]

# TODO: Badges
# TODO: Profiles

[dependencies]
bitflags = "1.1.0"
cgmath = { version = "0.17.0", features = ["swizzle"] }
crossbeam = "^0.7"
failure = "0.1.5"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
log = { version = "0.4.7", features = ["std"] }
matches = "0.1.8"
path-dsl = "0.5.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.40"

[dev-dependencies]
maplit = "1.0.1"
